# pyecod_prod

./: .gitignore  CLAUDE.md  PYECOD_MINI_API_SPEC.md  README.md  pyproject.toml
docs/: BACKFILL_2023_2025_WORKFLOW.md  BACKFILL_STATUS_REPORT.md  CHAIN_BLAST_FIX_SUMMARY.md  CLUSTERING_INTEGRATION_STATUS.md  CLUSTERING_STRATEGY.md  HHSEARCH_WORKFLOW.md  PHASE_1_TEST_RESULTS.md  PRODUCTION_PIPELINE.md  VERSION_TRACKING.md  cli_tools.md  phase1_complete.md  production_workflows.md
docs/sessions/: SESSION_SUMMARY_20251019.md
scripts/: backfill_metadata.py  batch_quality_stats.py  build_family_lookup.py  check_batch_status.py  check_database_status.py  destage_uniref_from_nodes.sh  load_clustering.py  populate_ecod_status.py  process_repair_batch.py  process_update_weeks.py  run_clustering.py  run_full_week_test.py  run_hhsearch_twostep.py  run_integration_test.py  run_medium_test.py  run_small_test.py  stage_uniref_to_nodes.sh  submit_full_week_test.sh  submit_hhsearch_staged.sh  submit_medium_test.sh  sync_to_database.py
src/pyecod_prod/: __init__.py
src/pyecod_prod/batch/: manifest.py  weekly_batch.py
src/pyecod_prod/core/: partition_runner.py  summary_generator.py
src/pyecod_prod/database/: __init__.py  sync.py
src/pyecod_prod/parsers/: hhsearch_parser.py  pdb_status.py
src/pyecod_prod/slurm/: blast_runner.py  hhsearch_runner.py
src/pyecod_prod/utils/: directories.py  family_lookup.py
tests/integration/: test_blast_workflow.py  test_hhsearch_workflow.py
tests/unit/: test_batch_manifest.py  test_family_lookup.py  test_partition_runner.py
(+3 files in other folders)
